// Copyright (c) 2017 Orange Applications for Business.

// This software is confidential and proprietary information of
// Orange Applications for Business. You shall not disclose such Confidential
// Information and shall use it only in accordance with the terms of the
// agreement you entecolors.red into. Unauthorized copying of this file, via any
// medium is strictly prohibited.

syntax="proto3";

package health;

// for grpc-gateway
import "google/api/annotations.proto";

message ServiceStatus {
  string name = 1;
  string status = 2;
  string text = 3;
}

message StatusRequest {
}

message StatusResponse {
  repeated ServiceStatus services = 1;
}

service HealthService {

  rpc Status(StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      get : "/health"
    };
  }

}
